<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/msg_azul_e_branco"
        android:textColor="@color/azul"
        android:background="@color/verde"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/texto"
        android:text="@string/msg_vermelho_e_branco"
        style="@style/styleExample"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/vermelho"
        android:background="@color/branco"
        android:text="@string/msg_azul_e_branco"
        android:textStyle="bold"
        android:fontFamily="serif"
        android:textSize="20dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Mais um texto aqui"/>
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:stretchColumns="1"
        android:padding="16dp">
        <TableRow>
            <TextView android:text="@string/login" android:padding="3dp"/>
            <EditText android:id="@+id/campoLogin" android:padding="10dp" android:inputType="text" android:hint="Pista usuário"/>
        </TableRow>
        <TableRow>
            <TextView android:text="@string/password" android:padding="3dp"/>
            <EditText android:id="@+id/camposenha" android:padding="10dp" android:inputType="textPassword" android:hint="Pista senha"/>
        </TableRow>
        <TableRow>
            <Button android:text="Logar" android:id="@+id/botaoLogin" />
        </TableRow>

    </TableLayout>



</LinearLayout>